# neural-diffusion-processes

./: README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
experiments/gp/: config.py  main.py
experiments/image_regression/: config.py  data.py  main.py  readme.md
experiments/image_regression/trained_models/May28_184005_jldx/: config.yaml  metrics.csv
experiments/image_regression/trained_models/May28_184005_jldx/checkpoints/: ckpt-468750.eqx
experiments/image_regression/trained_models/May29_131249_jafi/: config.yaml  metrics.csv
experiments/image_regression/trained_models/May29_131249_jafi/checkpoints/: ckpt-508600.eqx
experiments/regression/: commands_regression.txt  config.py  create_commands.py  data.py  eval_gp.py  evaluate_gp.sh  evaluate_ndp.sh  generate_data.py  image_data.py  main.py  readme.md  requirements_Sept2023.txt  visualize_data.py
experiments/regression/data/: readme.md
experiments/regression/trained_models/May26_014440_rcva/: config.yaml  metrics.csv
experiments/regression/trained_models/May26_023039_zrox/: config.yaml  metrics.csv
experiments/regression/trained_models/May26_042713_hjds/: config.yaml  metrics.csv
experiments/regression/trained_models/May27_145742_pjjl/: config.yaml  metrics.csv
experiments/regression/trained_models/May27_145742_zjii/: config.yaml  metrics.csv
experiments/regression/trained_models/May27_154336_nter/: config.yaml  metrics.csv
neural_diffusion_processes/: __init__.py  bidimensional_attention_model.py  data.py  gp.py  misc.py  model.py  process.py  sde.py  sparse_attention.py  types.py
neural_diffusion_processes/utils/: actions.py  asynclib.py  config.py  state.py  writers.py
notebooks/: intro.py
tests/: test_bidimensional_attention_model.py  test_model_properties.py
