[tool.poetry]
name = "neural-diffusion-processes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "neural_diffusion_processes"}]

[tool.poetry.dependencies]
python = "~3.10"
datasets = "^2.12.0"
jaxtyping = "^0.2.15"
check-shapes = "^1.0.0"
dm-haiku = "^0.0.9"
einops = "^0.6.1"
distrax = "^0.1.3"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
tensorboardx = "^2.6"
aim = "^3.17.4"
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.2"
ipython = "^8.13.2"
ml-collections = "^0.1.1"
equinox = "^0.9.0"
jax = {version = "^0.4.2", extras = ["cuda11-pip"]}
jaxlib = {version = "^0.4.2", extras = ["cuda11.cudnn86"]}

gpjax = "0.6.1"


[[tool.poetry.source]]
name = "jax[cuda11_pip]"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
