[tool.poetry]
name = "neural-diffusion-processes"
version = "0.1.0"
description = "Neural Diffusion Processes: diffusion models for processes."
authors = [
    "Vincent Dutordoir <dutordoirv@gmail.com>",
    "Alan Saul",
    "Zoubin Ghahramani",
    "Fergus Simpson"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jax = "^0.4.4"
jaxlib = "^0.4.4"
einops = "^0.6.0"
check-shapes = "^1.0.0"
jaxkern = "^0.0.5"
dm-haiku = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.3"

[tool.taskipy.tasks]
format = """
    isort neural_diffusion_processes tests
    black neural_diffusion_processes tests
"""
lint = """
    echo ============Ruff=============
    ruff check neural_diffusion_processes tests
    echo ============Isort=============
	isort neural_diffusion_processes tests --check-only --df
    echo ============Black=============
	black neural_diffusion_processes tests --check --diff
"""
test = "pytest tests"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
ignore = ["F722"]

[tool.ruff.per-file-ignores]
'neural_diffusion_processes/__init__.py' = ['F401']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"